# ffmpeg_stream

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  rtsp_stream.cc  tran_stream.cc
include/: ffmpeg_client.h  ffmpeg_trans.h
src/: ffmpeg_client.cc  ffmpeg_core.cc  ffmpeg_core.h  ffmpeg_protocol.cc  ffmpeg_protocol.h  ffmpeg_stream.cc  ffmpeg_stream.h  ffmpeg_trans.cc
